--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>digite seu nome:</p>
 <input type="text" name="nome"placeholder="nome completo"> <br>
 <input type="email" name="email" value @escola.pr.gov.br> <br>
-<input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> 
+<input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> <br>
 <input type="radio">
   </form>
 </body>
