--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formulario 2 N</title>
+    <title>Nobru80%deTaxa</title>
 </head>
 <body>
-  <form action="">
-    <p>digite seu nome:</p>
-<input type="text" name="nome"placeholder="nome completo"> <br>
-<input type="email" name="email" value @escola.pr.gov.br> <br>
-<input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> <br>
-<input type="radio">
-  </form>
+    <form action="" method="post">
+        <p>Digite seu nome:</p>
+        <input type="text" name="nome" placeholder="Nome Completo"> <br>
+        <input type="email" name="email" value="@escola.pr.gov.br"> <br>
+        <input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> <br>
+        <input type="radio" name="trabalho" value="Sim" checked> Sim
+        <input type="radio" name="trabalho" value="Não"> Não
+        <input type="radio" name="trabalho" value="Sim"> Com certeza
+        <input type="radio" name="trabalho" value="Não"> Sem certeza <br>
+        <input type="checkbox" name="novidades" checked> Aceito receber novidades <br>
+        <select name="estados" id="">
+            <option value="1">Acre</option>
+            <option value="2">Amazonas</option>
+            <option value="3">Paraná</option>
+            <option value="4">Rio de Janeiro</option>
+            <option value="5">Bahia</option>
+        </select>
+
+    </form>
 </body>
 </html>
