--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="radio" name="trabalho" value="Sim" checked> Sim
         <input type="radio" name="trabalho" value="Não"> Não
         <input type="radio" name="trabalho" value="Sim"> Com certeza
-        <input type="radio" name="trabalho" value="Não"> Sem certeza <br>
+        <input type="radio" name="trabalho" value="Não"> Não sei <br>
         <input type="checkbox" name="novidades" checked> Aceito receber novidades <br>
         <select name="estados" id="">
             <option value="1">Acre</option>
