--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>goti22</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/f/xnnavnda" method="post">
         <p>Digite seu nome:</p>
         <input type="text" name="nome" placeholder="Nome Completo" required> <br>
         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
