--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <input type="text" name="nome" placeholder="Nome Completo" required> <br>
         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
         <input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> <br>
-        <p>voce gostaria de ser nosso afilhiado da growth</p>
+        <p>voce gostaria de ser nosso afilhiado da growth</p> <br>
         <input type="radio" name="trabalho" value="Sim" checked> Sim
         <input type="radio" name="trabalho" value="Não"> Não
         <input type="radio" name="trabalho" value="Não"> Não sei <br>
