--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <body>
     <form action="https://formspree.io/f/xnnavnda" method="post">
         <p>Digite seu nome:</p>
+        <p>Coloque seu nome:</p>
         <input type="text" name="nome" placeholder="Nome Completo" required> <br>
+        <p>Coloque seu email</p>
         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
+        <p>Coloque seu telefone</p>
         <input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> <br>
-        <p>voce gostaria de ser nosso afilhiado da growth</p> <br>
+        <p>voce gostaria de ser nosso afilhiado da growth</p>
         <input type="radio" name="trabalho" value="Sim" checked> Sim
         <input type="radio" name="trabalho" value="Não"> Não
         <input type="radio" name="trabalho" value="Não"> Não sei <br>
