--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <form action="https://formspree.io/f/xnnavnda" method="post">
-        <p>Digite seu nome:</p>
         <p>Coloque seu nome:</p>
         <input type="text" name="nome" placeholder="Nome Completo" required> <br>
         <p>Coloque seu email</p>
@@ -20,6 +19,7 @@
         <input type="radio" name="trabalho" value="Não"> Não sei <br>
         <input type="checkbox" name="novidades" checked> Aceito receber novidades <br>
         <select name="estados" id="">
+            <p>Qual estado voce mora?</p>
             <option value="1">Acre</option>
             <option value="2">Amazonas</option>
             <option value="3">Paraná</option>
