--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
         <p>Coloque seu telefone</p>
         <input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> <br>
-        <p>voce gostaria de ser nosso afilhiado da growth</p>
+        <p>voce gostaria de ser nosso parceiro da growth</p>
         <input type="radio" name="trabalho" value="Sim" checked> Sim
         <input type="radio" name="trabalho" value="Não"> Não
         <input type="radio" name="trabalho" value="Não"> Não sei <br>
