--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <input type="email" name="email" value="@escola.pr.gov.br"> <br>
         <p>Coloque seu telefone</p>
         <input type="number" name="telefone" placeholder="(XX) XXXXX-XXXX"> <br>
-        <p>voce gostaria de ser parceiro da growth e receber whey e creatinas todos os meses</p>
+        <p>voce gostaria de ser parceiro da growth e receber whey e creatinas todos os meses?</p>
         <input type="radio" name="trabalho" value="Sim" checked> Sim
         <input type="radio" name="trabalho" value="Não"> Não
         <input type="radio" name="trabalho" value="Não"> Não sei <br>
+        <p>nos mandariamos as novidades da growth por email gostaria de recebê-las?</p>
         <input type="checkbox" name="novidades" checked> Aceito receber novidades <br>
         <p>Qual estado voce mora?</p>
         <select name="estados" id="">
