--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="radio" name="trabalho" value="Sim" checked> Sim
         <input type="radio" name="trabalho" value="Não"> Não
         <input type="radio" name="trabalho" value="Não"> Não sei <br>
-        <p>nos mandariamos as novidades da growth por email gostaria de recebê-las?</p>
+        <p>Nos mandariamos as novidades da growth por email gostaria de recebê-las?</p>
         <input type="checkbox" name="novidades" checked> Aceito receber novidades <br>
         <p>Qual estado voce mora?</p>
         <select name="estados" id="">
