--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input type="radio" name="trabalho" value="Não"> Não sei <br>
         <p>Nos mandariamos as novidades da growth por email gostaria de recebê-las?</p>
         <input type="checkbox" name="novidades" checked> Aceito receber novidades <br>
+        <input type="checkbox" name="novidades" checked> Não gostaria de receber as novidades <br>
         <p>Qual estado voce mora?</p>
         <select name="estados" id="">
             <option value="1">Acre</option>
